Fixing overflowing of pages on small screens due to incorrect navi + footer styles. Maximising amount of text on blog posts for smaller screens.

--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -2,7 +2,7 @@
   position        : relative;
   background-color: #d96459;
   height          : 24px;
-  min-width       : 415px;
+  /* min-width       : 415px; */
 }
 
 footer {
